<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CookMaster</string>
    <string name="hello_world">Hello world!</string>
    <string name="ble">蓝牙</string>
    <string name="net">网络</string>
    <string name="removeView">删除</string>
    <string name="serchHint">请输入菜谱名称</string>
    <string name="searchMenu">搜菜谱</string>
    <string name="loginHint">登陆后，你可以上传菜谱、管理智能厨具</string>
    <string name="logAndReg">登陆/注册</string>
    <string name="my_menu">我的菜谱</string>
    <string name="my_tool">我的厨具</string>
    <string name="tool">设置</string>
    <string name="main_stuff">主料</string>
    <string name="sub_stuff">辅料</string>
    <string name="flavor">调料</string>
    <string name="step_title">步骤</string>
    <string name="user_name">用户名</string>
    <string name="user_pass">密码</string>
    <string name="namehint">请输入手机号</string>
    <string name="passhint">请输入至少6位密码</string>
    <string name="signup">注册</string>
    <string name="signin">登录</string>
    <string name="addbox">添加调料盒</string>
    <string name="mactitle">盒子编号</string>
    <string name="flavortitle">调料名称</string>
    <string name="flavor_brand">调料品牌</string>
    <string name="addboxbtn">添加</string>
    <string name="cancelbtn">取消</string>
    <string name="fla_name">调料名称</string>
    <string name="fla_kind">调料类目</string>
    <string name="brand_mame">品牌名称</string>
    <string name="corpor_name">公司名称</string>
    <string name="corpor_tel">公司电话</string>
    <string name="corpor_addr">公司地址</string>
    <string name="corpor_url">公司网址</string>
    <string name="output">出料</string>
    <string name="del_box">删除</string>
    <string name="my_upload">我的作品</string>
    <string name="my_download">我的收藏</string>
    <string name="my_doing">我的草稿</string>
    <string name="edit_menu_title">输入菜谱名称，最多15个字符</string>
    <string name="material">食材</string>
    <string name="amount">用量</string>
    <string name="stuff_name">食材名称</string>
    <string name="stuff_kind">食材种类</string>
    <string name="stuff_brand">食材品牌</string>
    <string name="stuff_amount">食材用量</string>
    <string name="addstuff">添加食材</string>
    <string name="addstep">添加步骤</string>
    
    
    

</resources>
