<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
        android:focusable="true" 
	android:focusableInTouchMode="true"
    >
    <TextView 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textColor="#000000"
     android:textSize="20sp"
     android:textStyle="bold"
     android:text="@string/main_stuff"
     />
     
     <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	     <EditText
    	         android:id="@+id/mainstuff"
		     android:layout_weight="1"
		     android:layout_width = "wrap_content"
		     android:layout_height="wrap_content"
		     android:textColor="#CB5B26"
		     android:background="@drawable/booder_right"
		     android:layout_marginRight="10dp"
		     android:textSize="18sp"
		     android:hint="@string/material"
		     />
         
    	     <EditText
    	         android:id="@+id/amount"
		     android:layout_weight="1"
		     android:layout_width = "wrap_content"
		     android:layout_height="wrap_content"
		     android:textColor="#B2B2B2"
		     android:background="@drawable/booder_right"
		     android:hint="@string/amount"
		     android:textSize="18sp"/>
     </LinearLayout>
 

</LinearLayout>
