<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <include layout="@layout/title_bar"
      android:id="@+id/layout_titlebar"
      />
    
    <LinearLayout 
        android:id="@+id/flavor_name_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_titlebar"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            android:text="@string/fla_name"
            />
        <EditText 
            android:id="@+id/name_flavor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            />
    </LinearLayout>
        <LinearLayout 
        android:id="@+id/flavor_kind_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/flavor_name_bar"
        >
        <TextView 
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            android:text="@string/fla_kind"
            />
        <EditText 
            android:id="@+id/flavor_kind"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            />
    </LinearLayout>
            <LinearLayout 
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/flavor_kind_bar"
        >
        <Button 
            android:id="@+id/add_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/addboxbtn"
            />
        <Button 
            android:id="@+id/cancle_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/cancelbtn"
            />
    </LinearLayout>
</RelativeLayout>
