<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
            android:focusable="true" 
	android:focusableInTouchMode="true"
     >
    
    <include layout="@layout/title_bar"
     android:id="@+id/layout_titlebar"
     />

    <RelativeLayout
        android:id="@+id/mac_bar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_below="@+id/layout_titlebar"
	    android:background="@drawable/booder"
        >
        <TextView 
            android:id="@+id/box_mac_title"
            android:layout_width="100dp"
	         android:layout_height="wrap_content"
	         android:layout_alignParentLeft="true"
	         android:layout_centerVertical="true"
	         android:text="@string/mactitle"
	         android:textSize="18sp"
            />
        <EditText 
            android:id="@+id/box_mac"
            android:layout_width="180dp"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:textSize="18sp"       
            />

        <ImageView 
            android:id="@+id/box_mac_edit"
	         android:layout_width="45dp"
	         android:layout_height="45dp"
	         android:background="@drawable/edit"
	         android:layout_alignParentRight="true"
	         android:layout_centerVertical="true"
            />      
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/booder"
        android:id="@+id/flavor_show_bar"
        android:layout_below="@+id/mac_bar"
        >
        <RelativeLayout
        android:id="@+id/flavor_bar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        >
        <TextView 
            android:id="@+id/flavor_title"
            android:layout_width="100dp"
	         android:layout_height="wrap_content"
	         android:layout_alignParentLeft="true"
	         android:layout_centerVertical="true"
	         android:text="@string/flavortitle"
	         android:textSize="18sp"
            />
        <TextView 
            android:id="@+id/flavor"
            android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:textSize="18sp"
            />
        <ImageView 
            android:id="@+id/flavor_edit"
	         android:layout_width="45dp"
	         android:layout_height="45dp"
	         android:background="@drawable/edit"
	         android:layout_alignParentRight="true"
	         android:layout_centerVertical="true"
            />      
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/flavor_kind_bar"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_below="@+id/flavor_bar"
	    android:background="@drawable/booder"
        >
        <TextView 
            android:id="@+id/kind_title"
            android:layout_width="100dp"
	         android:layout_height="wrap_content"
	         android:layout_alignParentLeft="true"
	         android:layout_centerVertical="true"
	         android:text="@string/fla_kind"
	         android:textSize="18sp"
            />
        <TextView 
            android:id="@+id/flavor_kind"
            android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:textSize="18sp"
            />
    
    </RelativeLayout>
    </RelativeLayout>

    <LinearLayout 
        android:id="@+id/brand_brar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flavor_show_bar"
        android:orientation="vertical"
        android:background="@drawable/booder"
        >
	       <RelativeLayout
	        android:id="@+id/brand_name_bar"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"

		    android:orientation="horizontal"
	        >
	        <TextView 
	            android:id="@+id/brand_title"
	            android:layout_width="100dp"
		         android:layout_height="wrap_content"
		         		    android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
		         android:text="@string/brand_mame"
		         android:textSize="18sp"
	            />
	        <TextView 
	            android:id="@+id/brand_name"
	            android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:textSize="18sp"
	            />
	        <ImageView 
	            android:id="@+id/brand_edit"
		         android:layout_width="45dp"
		         android:layout_height="45dp"
		         android:background="@drawable/edit"
		         android:layout_alignParentRight="true"
	         	 android:layout_centerVertical="true"

	            />      
	    </RelativeLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:orientation="horizontal"
		    android:layout_height="40dp"
	        >
	        <TextView 
	            android:layout_width="100dp"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical|left"
		         android:text="@string/corpor_name"
		         android:textSize="18sp"
	            />
	        <TextView 
	            android:id="@+id/corpor_name"
	            android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
	            />
	    </LinearLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:orientation="horizontal"
		    android:layout_height="40dp"
	        >
	        <TextView 
	            android:layout_width="100dp"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical|left"
		         android:text="@string/corpor_tel"
		         android:textSize="18sp"
	            />
	        <TextView 
	            android:id="@+id/corpor_tel"
	            android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
	            />
	    </LinearLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:orientation="horizontal"
		    android:layout_height="40dp"
	        >
	        <TextView 
	            android:layout_width="100dp"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical|left"
		         android:text="@string/corpor_addr"
		         android:textSize="18sp"
	            />
	        <TextView 
	            android:id="@+id/corpor_addr"
	            android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
	            />
	    </LinearLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:orientation="horizontal"
		    android:layout_height="40dp"
	        >
	        <TextView 
	            android:layout_width="100dp"
		         android:layout_height="wrap_content"
		         android:layout_gravity="center_vertical|left"
		         android:text="@string/corpor_url"
		         android:textSize="18sp"
	            />
	        <TextView 
	            android:id="@+id/corpor_url"
	            android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
	            />
	    </LinearLayout>
        
    </LinearLayout>
	<RelativeLayout
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/brand_brar"
	    android:layout_centerHorizontal="true"
	       >
	       <Button 
	           android:id="@+id/ouput"
	           android:layout_width="80dp"
		         android:layout_height="wrap_content"
		         android:layout_alignParentLeft="true"
		         android:text="@string/output"
		         android:textSize="18sp"
	           />
	       <Button 
	           android:id="@+id/del"
	           android:layout_width="80dp"
	        	android:layout_height="wrap_content"
	        	android:text="@string/del_box"
	        	android:layout_alignParentRight="true"
	        	android:textSize="18sp"
	           />
	   </RelativeLayout>

</RelativeLayout>
