<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee">
    
    <include layout="@layout/title_bar"
      android:id="@+id/layout_titlebar"
      android:layout_alignParentTop="true"
      />
    <RelativeLayout 
        android:id="@+id/logBox"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_above="@+id/myMenuBox"
        android:layout_below="@+id/layout_titlebar"
        android:background="@drawable/booder"
        >
        <TextView
        android:id="@+id/loginHint"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:textSize="14sp"
        android:text="@string/loginHint"   
        android:layout_centerInParent="true"
        android:background="@drawable/booder"
        />
        <Button 
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="14sp"
        android:text="@string/logAndReg"   
        android:layout_below="@+id/loginHint"
        android:layout_centerHorizontal="true"
            />     
    </RelativeLayout>
    <RelativeLayout
        android:layout_above="@+id/mytoolBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myMenuBox"  
        android:background="@drawable/booder"
        >      
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:hint="@string/my_menu" 
        />  
        <ImageView 
           android:layout_width="80dp" 
           android:layout_height="60dp"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
           android:background="@drawable/forward_arrow"
            />  
    </RelativeLayout>
    <RelativeLayout
        android:layout_above="@+id/mysetBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/mytoolBox" 
        android:background="@drawable/booder"
        >      
        <TextView
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="20sp"
        android:hint="@string/my_tool" 
        />  
        <ImageView 
           android:layout_width="80dp" 
           android:layout_height="60dp"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
           android:background="@drawable/forward_arrow"
            />  
    </RelativeLayout>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/mysetBox"
        android:background="@drawable/booder"
        >      
        <TextView
           android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:hint="@string/tool" 
        android:layout_centerVertical="true"
        />  
        <ImageView 
           android:layout_width="80dp" 
           android:layout_height="60dp"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
           android:background="@drawable/forward_arrow"
            />  
    </RelativeLayout>



    	
    	
</RelativeLayout>
