<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true" 
	android:focusableInTouchMode="true"
    android:orientation="vertical" >
    
     <include layout="@layout/title_bar"
      android:id="@+id/layout_titlebar"
      />
    
    <LinearLayout 
        android:id="@+id/mac_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_titlebar"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            android:text="@string/mactitle"
            />
        <EditText 
            android:id="@+id/box_mac"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            />
    </LinearLayout>
        <LinearLayout 
        android:id="@+id/name_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/mac_bar"
        >
        <TextView 
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            android:text="@string/flavortitle"
            />
        <EditText 
            android:id="@+id/flavor_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            />
    </LinearLayout>
    <ListView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/flavorList"
        android:layout_below="@+id/name_bar"
         >     
    </ListView>
        <LinearLayout 
        android:id="@+id/brand_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/flavorList"
        >
        <TextView 
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            android:text="@string/flavor_brand"
            />
        <EditText 
            android:id="@+id/flavor_brand"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            />
    </LinearLayout>
    <ListView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/brandList"
        android:layout_below="@+id/brand_bar"
         >     
    </ListView>

        <LinearLayout 
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/brandList"
        >
        <Button 
            android:id="@+id/add_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/addboxbtn"
            />
        <Button 
            android:id="@+id/cancle_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/cancelbtn"
            />
    </LinearLayout>
</RelativeLayout>
