<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
        android:focusable="true" 
	android:focusableInTouchMode="true"
    >
         <include layout="@layout/title_bar"
      android:id="@+id/layout_titlebar"
      />
    
    <LinearLayout 
        android:id="@+id/brand_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_titlebar"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            android:text="@string/brand_mame"
            />
        <EditText 
            android:id="@+id/brand_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="18sp"
            />
    </LinearLayout>
        <ListView
        android:layout_width ="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/brandList"
        android:layout_below="@+id/brand_bar"
         />    
    <LinearLayout 
        android:id="@+id/corpor_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brandList"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            android:text="@string/corpor_name"
            />
        <EditText 
            android:id="@+id/corpor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/tel_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/corpor_bar"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            android:text="@string/corpor_tel"
            />
        <EditText 
            android:id="@+id/tel_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="18sp"
            />
    </LinearLayout>
        <LinearLayout 
        android:id="@+id/address_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tel_bar"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            android:text="@string/corpor_addr"
            />
        <EditText 
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="18sp"
            />
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/url_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_bar"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="18sp"
            android:text="@string/corpor_url"
            />
        <EditText 
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textSize="18sp"
            />
    </LinearLayout>
    
</RelativeLayout>
