<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <include layout="@layout/title_bar"
    android:id="@+id/layout_titlebar"
    />
    
    <RelativeLayout
    android:layout_below="@+id/layout_titlebar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/myUploadMenu"  
    android:background="@drawable/booder"
    >      
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="20sp"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:hint="@string/my_upload" 
    />  
    <TextView
    android:id="@+id/upLoadNum"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="20sp"
   	android:layout_centerInParent="true"
    />  
    <ImageView 
       android:layout_width="50dp" 
       android:layout_height="50dp"
       android:layout_alignParentRight="true"
       android:layout_centerVertical="true"
       android:background="@drawable/forward_arrow"
        />  
	</RelativeLayout>

    <RelativeLayout
    android:layout_below="@+id/myUploadMenu"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/myDownloadMenu"  
    android:background="@drawable/booder"
    >      
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="20sp"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:hint="@string/my_download" 
    />  
        <TextView
    android:id="@+id/downLoadNum"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="20sp"
   	android:layout_centerInParent="true" 
    />  
    <ImageView 
       android:layout_width="50dp" 
       android:layout_height="50dp"
       android:layout_alignParentRight="true"
       android:layout_centerVertical="true"
       android:background="@drawable/forward_arrow"
        />  
</RelativeLayout>
    <RelativeLayout
    android:layout_below="@+id/myDownloadMenu"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/myDoingMenu"  
    android:background="@drawable/booder"
    >      
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="20sp"
    android:layout_alignParentLeft="true"
    android:layout_centerVertical="true"
    android:hint="@string/my_doing" 
    />  
        <TextView
    android:id="@+id/doingNum"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="20sp"
   	android:layout_centerInParent="true" 
    />  
    <ImageView 
       android:layout_width="50dp" 
       android:layout_height="50dp"
       android:layout_alignParentRight="true"
       android:layout_centerVertical="true"
       android:background="@drawable/forward_arrow"
        />  
</RelativeLayout>

</RelativeLayout>
